# datim

./: .gitignore  .gitpod.Dockerfile  CHANGELOG.md  CONTRIBUTING.md  README.md  WAIVER  build.py  datim.py  datimc.py  datimp.py  prep.sh  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug-proposal.md  bug.md  proposal.md
experiments/: header.py  read-header.py
